--- a/index.html
+++ b/index.html
@@ -8558,9 +8558,11 @@
         const votes = gs?.votes || {};
         const isAllVoted = votes && players.length > 0 && Object.keys(votes).length >= players.length;
 
-        const safeOptions = gs?.curSit?.options || [];
-        const safeVoterQueue = gs?.voterQueue || [];
+        const safeOptions = Array.isArray(gs?.curSit?.options) ? gs.curSit.options : Object.values(gs?.curSit?.options || {});
+        const safeVoterQueue = Array.isArray(gs?.voterQueue) ? gs.voterQueue : Object.values(gs?.voterQueue || {});
         const safeVotes = gs?.votes || {};
+        const safeAgreements = Array.isArray(gs?.activeAgreements) ? gs.activeAgreements : Object.values(gs?.activeAgreements || {});
+        const safeTopOptions = Array.isArray(gs?.topOptions) ? gs.topOptions : Object.values(gs?.topOptions || {});
 
         if (!gs.curSit) return (
           <div className="animate-page space-y-8">
@@ -8597,7 +8599,7 @@
                       <div className="space-y-4">
                         <h3 className="text-sm font-black uppercase tracking-widest text-slate-500">Resumen de Recomendación</h3>
                         <div className="space-y-2">
-                          {(gs.lastResults?.ranking || []).map((r, i) => (
+                          {(Array.isArray(gs.lastResults?.ranking) ? gs.lastResults.ranking : Object.values(gs.lastResults?.ranking || {})).map((r, i) => (
                             <div key={i} className={`p-4 rounded-2xl flex items-center justify-between ${i === 0 ? 'bg-blue-500/20 border border-blue-500/30' : 'bg-white/5 border border-white/10'}`}>
                               <div className="flex items-center space-x-3">
                                 <span className="text-lg font-bold">{r.text}</span>
@@ -8623,7 +8625,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                              {(gs.lastResults?.voterDetails || []).map((vd, i) => (
+                              {(Array.isArray(gs.lastResults?.voterDetails) ? gs.lastResults.voterDetails : Object.values(gs.lastResults?.voterDetails || {})).map((vd, i) => (
                                 <tr key={i} className="border-b border-white/5">
                                   <td className="py-3 flex items-center space-x-2">
                                     <div className="w-2 h-2 rounded-full" style={{ backgroundColor: players[vd.playerIdx]?.color || '#ccc' }}></div>
@@ -8638,8 +8640,11 @@
                             <tfoot className="border-t-2 border-white/10 bg-white/5">
                               <tr className="text-white font-black">
                                 <td className="py-4 px-2">TOTAL BANCAS</td>
-                                {(gs.curSit?.options || []).map((_, idx) => {
-                                  const totalForOpt = (gs.lastResults?.voterDetails || []).reduce((sum, vd) => sum + (vd.distribution?.[idx] || 0), 0);
+                                {(safeOptions).map((_, idx) => {
+                                  const totalForOpt = (Array.isArray(gs.lastResults?.voterDetails) ? gs.lastResults.voterDetails : Object.values(gs.lastResults?.voterDetails || {})).reduce((sum, vd) => {
+                                    const dist = Array.isArray(vd.distribution) ? vd.distribution : Object.values(vd.distribution || {});
+                                    return sum + (dist[idx] || 0);
+                                  }, 0);
                                   return <td key={idx} className="py-4 text-center text-blue-400">{totalForOpt}</td>
                                 })}
                               </tr>
@@ -8653,10 +8658,16 @@
                       <div className="w-full">
                         {isHost ? (
                           <button onClick={() => {
-                            const newGs = { ...gs, showResults: false, negotiating: true, isAiProcessing: false };
+                            const newGs = {
+                              ...gs,
+                              showResults: false,
+                              negotiating: true,
+                              isAiProcessing: false,
+                              activeAgreements: Array.isArray(gs.activeAgreements) ? gs.activeAgreements : Object.values(gs.activeAgreements || {}),
+                              negotiationSwitches: gs.negotiationSwitches || {}
+                            };
                             setGs(newGs);
                             updateRemote(newGs);
-                            // We stay in 'parliament' because the negotiation UI is there
                           }} className="w-full bg-orange-600 hover:bg-orange-500 text-white font-bold py-6 rounded-3xl uppercase text-sm tracking-widest">Abrir Mesa de Negociación</button>
                         ) : (
                           <div className="bg-orange-500/10 p-6 rounded-3xl text-center text-orange-400 font-bold uppercase text-[11px]">Esperando...</div>
@@ -8698,7 +8709,7 @@
                   </div>
                   <div className="grid gap-4">
                     {safeOptions.map((o, i) => {
-                      const isVotedByCurrent = currentVoterIdx !== undefined && safeVotes[currentVoterIdx] == i;
+                      const isVotedByCurrent = currentVoterIdx !== undefined && safeVotes[String(currentVoterIdx)] == i;
                       return (
                         <button key={i} onClick={() => currentVoter && !currentVoter.isAI && castVote(i)} disabled={!currentVoter || currentVoter.isAI || isAllVoted} className={`p-8 rounded-[2rem] border-2 text-left transition-all ${isVotedByCurrent ? 'bg-blue-600/10 border-blue-500' : 'bg-white/5 border-white/5'}`}>
                           <div className="flex justify-between items-center">
@@ -8707,7 +8718,7 @@
                               <span className="text-[13px] text-slate-500 uppercase font-bold tracking-widest">Costo: ${o?.cost}M</span>
                             </div>
                             <div className="flex -space-x-2">
-                              {safeVoterQueue.map(vIdx => (safeVotes[vIdx] == i) ? (<div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10]" style={{ backgroundColor: players[vIdx]?.color || '#ccc' }}></div>) : null)}
+                              {safeVoterQueue.map(vIdx => (safeVotes[String(vIdx)] == i) ? (<div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10]" style={{ backgroundColor: players[vIdx]?.color || '#ccc' }}></div>) : null)}
                             </div>
                           </div>
                         </button>
@@ -8736,12 +8747,12 @@
                     <h4 className="text-[13px] font-black uppercase tracking-widest text-slate-500 mb-2">Diputados Indecisos (Matriz de Compromisos)</h4>
                     <div className="grid gap-3">
                       {(gs?.players || []).map((p, pIdx) => {
-                        const originalVote = gs?.votes?.[pIdx];
+                        const originalVote = safeVotes[String(pIdx)];
                         const currentVote = gs?.negotiationSwitches?.[pIdx] ?? originalVote;
-                        const isTopOption = (gs?.topOptions || []).some(entry => entry && entry[0] && parseInt(entry[0]) == currentVote);
+                        const isTopOption = safeTopOptions.some(entry => entry && entry[0] && parseInt(entry[0]) == currentVote);
 
                         // Si ya está en una opción ganadora, no mostramos el formulario (ya está persuadido o es original)
-                        const originallyLost = !(gs?.topOptions || []).some(entry => entry && entry[0] && parseInt(entry[0]) === originalVote);
+                        const originallyLost = !safeTopOptions.some(entry => entry && entry[0] && parseInt(entry[0]) === originalVote);
 
                         if (!originallyLost && currentVote === originalVote) return null; // Es un ganador original
 
@@ -8773,8 +8784,8 @@
                                 value={currentVote !== undefined && !originallyLost ? currentVote : (gs.negotiationSwitches?.[pIdx] ?? "")}
                               >
                                 <option value="">Cambiar voto a...</option>
-                                {(gs?.topOptions || []).map((entry) => entry && entry[0] && (
-                                  <option key={entry[0]} value={entry[0]}>{gs?.curSit?.options[parseInt(entry[0])]?.text}</option>
+                                {safeTopOptions.map((entry) => entry && entry[0] && (
+                                  <option key={entry[0]} value={entry[0]}>{safeOptions[parseInt(entry[0])]?.text}</option>
                                 ))}
                               </select>
 
@@ -8847,7 +8858,7 @@
                 {gs.negotiating && (
                   <div className="mt-8 pt-6 border-t border-white/5 flex justify-between items-center">
                     <div className="text-[13px] uppercase font-bold text-slate-500">
-                      Acuerdos Pendientes: <span className="text-white">{gs.activeAgreements.length}</span>
+                      Acuerdos Pendientes: <span className="text-white">{safeAgreements.length}</span>
                     </div>
                     <div className="flex space-x-4">
                       <button onClick={() => setGs(p => ({ ...p, negotiating: false, curSit: null, logs: ["Moción retirada.", ...p.logs] }))} className="px-6 py-3 rounded-2xl text-[13px] font-bold uppercase text-red-500 hover:bg-red-500/10 transition-colors">
@@ -8883,78 +8894,87 @@
     }
 
     function TabNegotiation({ gs, setGs, updateRemote }) {
-      if (!gs) return null;
-      console.log("Render TabNegotiation, GS:", gs);
-      const pacts = gs?.pacts || [];
-      const players = gs?.players || [];
+      try {
+        if (!gs) return null;
+        console.log("Render TabNegotiation, GS:", gs);
+        const pacts = Array.isArray(gs?.pacts) ? gs.pacts : Object.values(gs?.pacts || {});
+        const players = gs?.players || [];
 
-      return (
-        <div className="animate-page space-y-8">
-          <div className="text-center space-y-2">
-            <h2 className="text-5xl font-extrabold tracking-tight uppercase">Libro de <span className="text-orange-500">Pactos</span></h2>
-            <p className="text-slate-500 font-medium">Registro histórico de compromisos, alianzas y prebendas legislativas.</p>
-          </div>
-
-          {pacts.length === 0 ? (
-            <div className="glass rounded-[3rem] p-16 text-center space-y-6 opacity-60">
-              <Icon name="shake" className="w-16 h-16 text-slate-700 mx-auto" />
-              <p className="text-slate-500 uppercase text-sm font-black tracking-widest">No hay registros de pactos en esta administración</p>
+        return (
+          <div className="animate-page space-y-8">
+            <div className="text-center space-y-2">
+              <h2 className="text-5xl font-extrabold tracking-tight uppercase">Libro de <span className="text-orange-500">Pactos</span></h2>
+              <p className="text-slate-500 font-medium">Registro histórico de compromisos, alianzas y prebendas legislativas.</p>
             </div>
-          ) : (
-            <div className="glass rounded-[2.5rem] overflow-hidden border border-white/10">
-              <table className="w-full text-left border-collapse">
-                <thead>
-                  <tr className="bg-white/5 text-slate-500 uppercase text-[12px] font-black tracking-widest">
-                    <th className="px-8 py-6">Promitente</th>
-                    <th className="px-8 py-6">Beneficiario</th>
-                    <th className="px-8 py-6">Compromiso</th>
-                    <th className="px-8 py-6 text-center">Estado</th>
-                    <th className="px-4 py-6 text-center">T. Pacto</th>
-                    <th className="px-4 py-6 text-right">T. Resol.</th>
-                  </tr>
-                </thead>
-                <tbody className="text-[14px]">
-                  {pacts.map((pact, i) => (
-                    <tr key={i} className="border-b border-white/5 hover:bg-white/5 transition-colors group">
-                      <td className="px-8 py-6 font-bold text-white">
-                        <div className="flex items-center space-x-3">
-                          <div className="w-2 h-8 rounded-full" style={{ backgroundColor: gs.players?.[pact.promisorIdx]?.color || '#ccc' }}></div>
-                          <span>{pact.promisorName}</span>
-                        </div>
-                      </td>
-                      <td className="px-8 py-6 text-slate-300">
-                        <div className="flex items-center space-x-3">
-                          <Icon name="user" className="w-4 h-4 opacity-30" />
-                          <span>{pact.beneficiaryName}</span>
-                        </div>
-                      </td>
-                      <td className="px-8 py-6">
-                        <div className="space-y-1">
-                          <span className="text-blue-400 font-bold block">{pact.detail}</span>
-                          <span className="text-[10px] text-slate-500 uppercase font-black">Turno {pact.turnCreated}</span>
-                        </div>
-                      </td>
-                      <td className="px-8 py-6 text-center">
-                        <span className={`px-4 py-2 rounded-xl text-[12px] font-black uppercase tracking-widest border border-current bg-current/10 ${pact.status === 'Cumplido' ? 'text-emerald-400' :
-                          pact.status === 'Traición' ? 'text-red-500' : 'text-orange-400 animate-pulse'
-                          }`}>
-                          {pact.status}
-                        </span>
-                      </td>
-                      <td className="px-4 py-6 text-center font-mono text-slate-500">
-                        #{pact.turnCreated}
-                      </td>
-                      <td className="px-4 py-6 text-right font-mono text-slate-300">
-                        {pact.turnResolved ? `#${pact.turnResolved}` : '--'}
-                      </td>
+
+            {pacts.length === 0 ? (
+              <div className="glass rounded-[3rem] p-16 text-center space-y-6 opacity-60">
+                <Icon name="shake" className="w-16 h-16 text-slate-700 mx-auto" />
+                <p className="text-slate-500 uppercase text-sm font-black tracking-widest">No hay registros de pactos en esta administración</p>
+              </div>
+            ) : (
+              <div className="glass rounded-[2.5rem] overflow-hidden border border-white/10">
+                <table className="w-full text-left border-collapse">
+                  <thead>
+                    <tr className="bg-white/5 text-slate-500 uppercase text-[12px] font-black tracking-widest">
+                      <th className="px-8 py-6">Promitente</th>
+                      <th className="px-8 py-6">Beneficiario</th>
+                      <th className="px-8 py-6">Compromiso</th>
+                      <th className="px-8 py-6 text-center">Estado</th>
+                      <th className="px-4 py-6 text-center">T. Pacto</th>
+                      <th className="px-4 py-6 text-right">T. Resol.</th>
                     </tr>
-                  ))}
-                </tbody>
-              </table>
-            </div>
-          )}
-        </div>
-      );
+                  </thead>
+                  <tbody className="text-[14px]">
+                    {pacts.map((pact, i) => (
+                      <tr key={i} className="border-b border-white/5 hover:bg-white/5 transition-colors group">
+                        <td className="px-8 py-6 font-bold text-white">
+                          <div className="flex items-center space-x-3">
+                            <div className="w-2 h-8 rounded-full" style={{ backgroundColor: gs.players?.[pact.promisorIdx]?.color || '#ccc' }}></div>
+                            <span>{pact.promisorName}</span>
+                          </div>
+                        </td>
+                        <td className="px-8 py-6 text-slate-300">
+                          <div className="flex items-center space-x-3">
+                            <Icon name="user" className="w-4 h-4 opacity-30" />
+                            <span>{pact.beneficiaryName}</span>
+                          </div>
+                        </td>
+                        <td className="px-8 py-6">
+                          <div className="space-y-1">
+                            <span className="text-blue-400 font-bold block">{pact.detail}</span>
+                            <span className="text-[10px] text-slate-500 uppercase font-black">Turno {pact.turnCreated}</span>
+                          </div>
+                        </td>
+                        <td className="px-8 py-6 text-center">
+                          <span className={`px-4 py-2 rounded-xl text-[12px] font-black uppercase tracking-widest border border-current bg-current/10 ${pact.status === 'Cumplido' ? 'text-emerald-400' :
+                            pact.status === 'Traición' ? 'text-red-500' : 'text-orange-400 animate-pulse'
+                            }`}>
+                            {pact.status}
+                          </span>
+                        </td>
+                        <td className="px-4 py-6 text-center font-mono text-slate-500">
+                          #{pact.turnCreated}
+                        </td>
+                        <td className="px-4 py-6 text-right font-mono text-slate-300">
+                          {pact.turnResolved ? `#${pact.turnResolved}` : '--'}
+                        </td>
+                      </tr>
+                    ))}
+                  </tbody>
+                </table>
+              </div>
+            )}
+          </div>
+        );
+      } catch (err) {
+        return (
+          <div className="p-10 bg-red-900/50 text-white rounded-3xl">
+            <h3>Error en Pactos: {err.message}</h3>
+            <pre className="text-[10px]">{JSON.stringify(gs, null, 2)}</pre>
+          </div>
+        );
+      }
     }
 
     function TabLogs({ gs }) {
